# mathtools

./: README.md  cli.py  environments.py  pyproject.toml
src/: main.py
src/cli/: general.py  memory.py
src/constants/: environments.py
src/utils/: common.py
tests/: conftest.py  test_cli_general.py  test_cli_installer.py  test_cli_memory.py  test_constants.py  test_main.py  test_utils_common.py  test_utils_installer_utils.py  test_utils_ui.py
