[project]
name = "matrueba-sdd-installer"
version = "1.0.0"
description = "CLI installer for MathTools AI Development Framework"
requires-python = ">=3.10"
dependencies = [
    "rich>=13.0.0",
    "requests>=2.31.0",
    "questionary>=2.0.1",
]

[project.urls]
Homepage = "https://github.com/matrueba/mathtools"

[project.scripts]
matrueba-sdd = "main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 80